fix: fix login images overlap

--- a/frontend/src/pages/Auth/auth.css
+++ b/frontend/src/pages/Auth/auth.css
@@ -28,7 +28,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  margin-top: 5%;
   flex: 1;
 }
 
@@ -39,13 +39,16 @@ footer {
 }
 
 .auth_girl_1 {
+  position: fixed;
   object-fit: contain;
-  max-width: 230px;
+  width: 180px;
 }
 
 .auth_girl_2 {
+  position: fixed;
   object-fit: contain;
   width: 150px;
+  right: 0;
 }
 
 @media (min-width: 768px) {
@@ -55,7 +58,7 @@ footer {
 
   .auth_girl_1 {
     object-fit: contain;
-    width: 270px;
+    width: 200px;
   }
 
   .auth_girl_2 {
